# conan-eg

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
src/: CMakeLists.txt  TimeMe.cpp  TimeMe.hpp
test/: CMakeLists.txt  main.cpp
test/src/: TimeMeTest.cpp
